Fix: dashboard api, 디자인 변경사항 반영
